--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Created by</h3>
-                    <p class="text-muted" target="_blank"><font size="-1">This archive is an initiative of the Urban and Community Forestry program at UConn Extension, and was supported by the Strategic Vision Implementation Committee of the University of Connecticut's (UConn) College of Agriculture, Health and Natural Resources, and UConn Hartford's Research on Resilient Cities, Racism and Equity.</p>
+                    <p class="text-muted" target="_blank"><font size="-1">text</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -27,14 +27,14 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Other stories</h3>
-                    <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">If you're interested in other digital storytelling, click here to explore the story maps by UConn's Center for Land use Education and Research.</a>
+                    <a href="" class="text-muted" target="_blank">text</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>How to</h3>
-                    <a href="https://nrca.uconn.edu/eds/" class="text-muted" target="_blank">If you're a student or a teacher and would like to learn how to create digital stories, click here to learn about the UConn Eco-Digital Storytelling program.</a>
+                    <a href="" class="text-muted" target="_blank">text</a>
                 </div>
             </div>
         </div>
